--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.21"
+    ext.kotlin_version = "1.4.30"
+    ext.compile_sdk_version=28
+    ext.build_tools_version='28.0.3'
+
     repositories {
         google()
         jcenter()
