--- a/fbreader/app/build.gradle
+++ b/fbreader/app/build.gradle
@@ -32,7 +32,7 @@ android {
 		versionCode 1
 		versionName "1.0.0"
 		ndk {
-			abiFilters "armeabi-v7a"
+			abiFilters "armeabi-v7a","x86"
 		}
 	}
 
