--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 26 15:46:22 CST 2021
-ndk.dir=C\:\\Users\\Android\\AppData\\Local\\Android\\Sdk\\ndk\\21.3.6528147
-sdk.dir=C\:\\Users\\Android\\AppData\\Local\\Android\\Sdk
+#Sun Mar 14 00:50:19 CST 2021
+ndk.dir=C\:\\Users\\HLP\\AppData\\Local\\Android\\Sdk\\ndk\\22.0.7026061
+sdk.dir=C\:\\Users\\HLP\\AppData\\Local\\Android\\Sdk
