--- a/fbreader/zip-amse/build.gradle
+++ b/fbreader/zip-amse/build.gradle
@@ -5,16 +5,16 @@ dependencies {
 }
 
 android {
-	compileSdkVersion 26
-	buildToolsVersion '26.0.2'
+	compileSdkVersion compile_sdk_version
+	buildToolsVersion build_tools_version
 
 	lintOptions {
 		abortOnError false
 	}
 
 	compileOptions {
-		sourceCompatibility JavaVersion.VERSION_1_7
-		targetCompatibility JavaVersion.VERSION_1_7
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
 	}
 
 	sourceSets {
@@ -24,10 +24,10 @@ android {
 	}
 
 	defaultConfig {
-		minSdkVersion 21
-		targetSdkVersion 26
-		versionCode 1
-		versionName "1.0"
+		minSdkVersion min_sdk_version
+		targetSdkVersion target_sdk_version
+		versionCode version_code
+		versionName version_name
 
 		ndk {
 			abiFilters "armeabi-v7a","x86"
