--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.30"
-    ext.compile_sdk_version=28
-    ext.build_tools_version='28.0.3'
+    ext.kotlin_version = "1.4.31"
+    ext.compile_sdk_version=30
+    ext.build_tools_version='30.0.3'
+    ext.min_sdk_version=21
+    ext.target_sdk_version=30
+    ext.version_code=1
+    ext.version_name="1.0.0"
 
     repositories {
         google()
