翻页效果优化

--- a/fbreader/common/build.gradle
+++ b/fbreader/common/build.gradle
@@ -7,6 +7,8 @@ dependencies {
 	compile files('libs/LingvoIntegration_2.5.2.12.jar')
 	compile files('libs/open-dictionary-api-1.2.1.jar')
 	compile files('libs/json-simple-1.1.1.jar')
+
+	implementation "com.blankj:utilcodex:$utils"
 }
 
 android {
