--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     ext.version_code=1
     ext.version_name="1.0.0"
 
+    ext.utils="1.30.6"
+
     repositories {
         google()
         jcenter()
