--- a/fbreader/app/build.gradle
+++ b/fbreader/app/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 	compile files('libs/pdfparse.jar')
 
 	implementation "androidx.appcompat:appcompat:1.2.0"
-	implementation 'com.blankj:utilcodex:1.30.6'
+	implementation "com.blankj:utilcodex:$utils"
 }
 
 android {
